--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.19.0",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
+    "query-string": "^7.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.3",
+    "use-debounce": "^6.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
